# SDL_Game

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
Entities/: Camera.cpp  Camera.h  IDGenerator.cpp  IDGenerator.h  Player.cpp  Player.h
Entities/TileMap/: Tile.cpp  Tile.h  TileMap.cpp  TileMap.h
Graphics/: Camera.cpp  Camera.h  Graphics.h
Graphics/Components/: IDrawable.h  IEventCallable.h  IMouseControllable.h  IUpdatable.h
Math/: Math.h  Vector2.h
